objects/Account_CustomMetadata__mdt.object
<CustomObject>
    <fields>
        <fullName>Date_Field__c</fullName>
        <label>Date Field</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Account_CustomMetadata</label>
    <pluralLabel>Account_CustomMetadata</pluralLabel>
</CustomObject>